--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:id="@+id/angabe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:text="Gib deine Matrikelnummer ein"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/matrikelnummer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:inputType="number"
+        android:hint="Matrikelnummer"
+        android:layout_margin="40dp"
+        android:layout_below="@id/angabe"
+        android:layout_centerHorizontal="true"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/servertext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hier Server-Text"
+        android:layout_below="@id/matrikelnummer"
+        android:textSize="25dp"
+        android:gravity="center"
+
+        android:layout_margin="20dp"
+        />
+
+    <Button
+        android:id="@+id/abschicken"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/servertext"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        android:text="Abschicken"
+        />
+
+
+</RelativeLayout>
