--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:id="@+id/servertext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hier Server-Text"
+        android:text="Hier steht die Antwort des Servers"
         android:layout_below="@id/matrikelnummer"
         android:textSize="25dp"
         android:gravity="center"
